Fixed mobile issue with white space on the side, Fixed Submit disabled, Fixed Fade In and Out issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@ html, body {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 300;
     width: auto;
+    min-width: 366px;
     /*overflow-x: hidden;*/
 }
 .full{
@@ -87,7 +88,7 @@ font-weight: 300;
     background-position: center;
     /*background-attachment: fixed;*/
     -webkit-transition: width 2s; /* Safari */
-    transition: background-image 0.5s;
+    /*transition: background-image 0.5s;*/
 }
 
 @media (max-width:600px){
@@ -323,7 +324,7 @@ a {
 header {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 0px;
     width: 100%;
     z-index: 99999999;
     background: transparent;
@@ -372,7 +373,7 @@ header .logo {
 #sidebar-wrapper {
     text-align: center;
     z-index: 1000;
-    position: fixed;    
+    position: fixed;
     right: 0;
     width: 250px;
     height: 100%;
